# Mupen64MCP

./: .gitignore  README.md  ROM_TESTING.md  TOOLS.md  TROUBLESHOOTING.md  build_output.txt  start_daemon.bat  start_viewer.py  test_bootseq.ps1
docs/: ARCHITECTURE.md
docs/engine_reverse/: CRUISN_USA_ENGINE.md
examples/: claude_desktop_config.json  cursor_mcp.json
mcp/python/: pyproject.toml
mcp/python/n64_debug_mcp/: daemon_client.py  n64_viewer.py  n64_viewer_flet.py  server.py
native/input_inject/: CMakeLists.txt  plugin.c  plugin.h
native/n64_debug_daemon/: CMakeLists.txt  build.bat
native/n64_debug_daemon/include/: daemon.h  emulator_session.h  json_rpc_server.h
native/n64_debug_daemon/src/: breakpoints.cpp  emulator_session.cpp  json_rpc_server.cpp  main.cpp  memory.cpp  mupen_core_loader.cpp  tracing.cpp
